@@ -12,6 +12,9 @@ Version 0.9.2 [TBD]
 	new tag: <et:pages:excerpt>
 	new tags to assist with navigation previous/next links when iterating items
 	new default template
+	comments plugin:
+		new default snippets
+		change: by default, comment processing now done prior to saving comment instead of after retrieving it
 
 Version 0.9.1 [not released]
 	miscellaneous bug fixes
